--- a/style.css
+++ b/style.css
@@ -3,6 +3,15 @@ body{
     margin: 0;
     font-family: SolaimanLipi;
 }
+h1{
+    margin: 0;
+}
+h2{
+    margin: 0;
+}
+h3{
+    margin: 0;
+}
 .header{
     display: flex;
     justify-content: space-between;
@@ -31,6 +40,33 @@ body{
 }
 .Navbar_Link {
     padding-right: 8px;
+}
+.section{
+    padding: 16px;
+}
+.hero-main{
+    padding: 10px;
+    width:500px;
+    border: 1px solid #e2e2e2;
+    border-radius: 5px;
+}
+.hero-main img{
+    width:100%;
+    border-radius:5px;
+}
+.hero-child{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    gap:8px;
+}
+.hero-child img{
+    width: 30%;
+    height: auto;
+    border-radius: 5px;
+}
+.hero-child-text{
+    padding: 2px;
 }
 @media only screen and (max-width: 768px) {
     .Navbar_Items,
