--- a/style.css
+++ b/style.css
@@ -1,24 +1,44 @@
-@font-face { font-family: SolaimanLipi; src: url('SolaimanLipi.ttf'); }
-body{
+/* 
+Author:Md Nayem 
+*/
+
+@font-face {
+    font-family: SolaimanLipi;
+    src: url('SolaimanLipi.ttf');
+}
+
+body {
     margin: 0;
     font-family: SolaimanLipi;
 }
-h1{
+
+h1 {
+    margin: 0;
+    font-size: 1.5em;
+}
+
+h2 {
+    margin: 0;
+    font-size: 1.2em;
+}
+
+h3 {
+    margin: 0;
+    font-size: 0.9em;
+}
+
+h4 {
     margin: 0;
 }
-h2{
-    margin: 0;
-}
-h3{
-    margin: 0;
-}
-.header{
+
+.header {
     display: flex;
     justify-content: space-between;
     padding: 16px;
     align-items: center;
 }
-.topbar{
+
+.topbar {
     background: linear-gradient(90deg, rgba(70, 172, 194, 1) 0%, rgba(0, 0, 0, 1) 100%);
     color: white;
     display: flex;
@@ -27,59 +47,155 @@ h3{
     justify-content: space-between;
     align-items: center;
 }
+
 .Navbar {
     background-color: #46ACC2;
     display: flex;
     padding: 12px 16px;
     color: white;
 }
+
 .Navbar_Items {
-    display:flex;
-    gap:16px;
+    display: flex;
+    gap: 16px;
     font-size: 18px;
 }
+
 .Navbar_Link {
     padding-right: 8px;
 }
-.section{
+
+.section {
     padding: 16px;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
 }
-.hero-main{
+
+.hero {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+/*hero main widget start*/
+.hero-main {
     padding: 10px;
-    width:500px;
+    height: fit-content;
+    width: 600px;
     border: 1px solid #e2e2e2;
     border-radius: 5px;
 }
-.hero-main img{
-    width:100%;
-    border-radius:5px;
+
+.hero-main img {
+    width: 100%;
+    border-radius: 5px;
 }
-.hero-child{
+
+.hero-child {
     width: 100%;
     display: flex;
     flex-direction: row;
-    gap:8px;
+    gap: 8px;
+    padding: 10px 0px 0px;
 }
-.hero-child img{
+
+.hero-child img {
     width: 30%;
     height: auto;
     border-radius: 5px;
 }
-.hero-child-text{
-    padding: 2px;
+
+.hero-child-text {
+    padding: 5px 2px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
+
+/*hero main widget end*/
+/*hero column widget start*/
+.hero-column {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 10px;
+    width: 300px;
+    border: 1px solid #e2e2e2;
+    border-radius: 5px;
+}
+
+.hero-double-column {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    width: 600px;
+    border: 1px solid #e2e2e2;
+    border-radius: 5px;
+}
+
+.hero-double-column-section {
+    display: flex;
+}
+
+.hero-column img {
+    width: 100%;
+    border-radius: 5px;
+}
+
+.hero-column-child {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+    padding: 10px 0px 0px;
+}
+
+.hero-column-child img {
+    width: 30%;
+    height: auto;
+    border-radius: 5px;
+}
+
+.hero-column-child-text {
+    padding: 5px 2px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.psi{
+    padding: 10px;
+    height: fit-content;
+    width: 300px;
+    border: 1px solid #e2e2e2;
+    border-radius: 5px;
+    background-color: rgba(255, 0, 0, 0.7);
+    justify-content: space-between;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.psi img{
+width: 100%;
+height: 80px;
+}
+/*hero column widget end*/
 @media only screen and (max-width: 768px) {
+
     .Navbar_Items,
     .Navbar {
-      flex-direction: column;
+        flex-direction: column;
     }
 }
+
 @media only screen and (max-width: 768px) {
+
     .Navbar_Items,
     .Navbar {
-      flex-direction: column;
+        flex-direction: column;
     }
+
     .Navbar_Items {
-      display:none;
+        display: none;
     }
 }
