--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ body {
     font-family: SolaimanLipi;
 }
 
+p{
+    margin: 0;
+}
+
 h1 {
     margin: 0;
     font-size: 1.5em;
@@ -65,6 +69,24 @@ h4 {
     padding-right: 8px;
 }
 
+.scroller{
+    background: linear-gradient(90deg, rgb(255, 32, 40) 0%, rgb(200, 34, 34) 100%);;;
+    display: flex;
+    color: white;
+    font-size: 16px;
+}
+
+.scroller-title {
+    background: linear-gradient(90deg, rgb(255, 32, 40) 0%, rgb(200, 34, 34) 100%);;
+    padding: 5px 16px;
+    font-weight: bold;
+}
+.scroller-items{
+    display: block;
+    padding: 5px 16px;
+    width: 100%;
+}
+
 .section {
     padding: 16px;
     display: flex;
@@ -81,7 +103,6 @@ h4 {
 /*hero main widget start*/
 .hero-main {
     padding: 10px;
-    height: fit-content;
     width: 600px;
     border: 1px solid #e2e2e2;
     border-radius: 5px;
@@ -126,6 +147,7 @@ h4 {
     width: 300px;
     border: 1px solid #e2e2e2;
     border-radius: 5px;
+    gap: 10px;
 }
 
 .hero-double-column {
@@ -139,12 +161,13 @@ h4 {
 
 .hero-double-column-section {
     display: flex;
+    flex-direction: column;
 }
 
 .hero-double-column-item {
     display: flex;
-    flex-direction: column;
-    gap: 20px;
+    flex-direction: row;
+    gap: 10px;
 }
 
 .hero-column img {
@@ -173,6 +196,26 @@ h4 {
     gap: 10px;
     justify-content: center;
 }
+.hero-box-child {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 10px 0px 0px;
+}
+.hero-box-child img {
+    width: 100%;
+    height: auto;
+    border-radius: 5px;
+}
+
+.hero-box-child-text {
+    padding: 5px 2px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    justify-content: center;
+}
 .psi{
     padding: 10px;
     width: 300px;
@@ -181,12 +224,10 @@ h4 {
     background-color: rgba(255, 0, 0, 0.7);
     justify-content: space-between;
     display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
+    flex-direction: column;}
 .psi img{
 width: 100%;
-height: 80px;
+height: 85px;
 }
 /*hero column widget end*/
 @media only screen and (max-width: 768px) {
@@ -206,5 +247,47 @@ height: 80px;
 
     .Navbar_Items {
         display: none;
+    }
+}
+
+#scroll-container {
+    overflow: hidden;
+  }
+  
+  #scroll-text {
+    /* animation properties */
+    -moz-transform: translateX(100%);
+    -webkit-transform: translateX(100%);
+    transform: translateX(100%);
+    
+    -moz-animation: my-animation 30s linear infinite;
+    -webkit-animation: my-animation 30s linear infinite;
+    animation: my-animation 30s linear infinite;
+  }
+  #scroll-text:hover{
+    animation-play-state: paused;
+  }
+  /* for Firefox */
+  @-moz-keyframes my-animation {
+    from { -moz-transform: translateX(100%); }
+    to { -moz-transform: translateX(-100%); }
+  }
+  
+  /* for Chrome */
+  @-webkit-keyframes my-animation {
+    from { -webkit-transform: translateX(100%); }
+    to { -webkit-transform: translateX(-100%); }
+  }
+  
+  @keyframes my-animation {
+    from {
+      -moz-transform: translateX(100%);
+      -webkit-transform: translateX(100%);
+      transform: translateX(100%);
+    }
+    to {
+      -moz-transform: translateX(-100%);
+      -webkit-transform: translateX(-100%);
+      transform: translateX(-100%);
     }
 }
