--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     font-family: SolaimanLipi;
 }
 
-p{
+p {
     margin: 0;
 }
 
@@ -34,18 +34,22 @@ h3 {
 h4 {
     margin: 0;
 }
-#line-icon{
+
+#line-icon {
     font-size: 1em;
     background: -webkit-linear-gradient(#333, #ea2028);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    margin-left: -5px;
 }
+
 .header {
     display: flex;
     justify-content: space-between;
     padding: 16px;
     align-items: center;
 }
+
 .topbar {
     background: linear-gradient(90deg, rgba(70, 172, 194, 1) 0%, rgba(0, 0, 0, 1) 100%);
     color: white;
@@ -73,19 +77,23 @@ h4 {
     padding-right: 8px;
 }
 
-.scroller{
-    background: linear-gradient(90deg, rgb(255, 32, 40) 0%, rgb(200, 34, 34) 100%);;;
+.scroller {
+    background: linear-gradient(90deg, rgb(255, 32, 40) 0%, rgb(200, 34, 34) 100%);
+    ;
+    ;
     display: flex;
     color: white;
     font-size: 16px;
 }
 
 .scroller-title {
-    background: linear-gradient(90deg, rgb(255, 32, 40) 0%, rgb(200, 34, 34) 100%);;
+    background: linear-gradient(90deg, rgb(255, 32, 40) 0%, rgb(200, 34, 34) 100%);
+    ;
     padding: 5px 16px;
     font-weight: bold;
 }
-.scroller-items{
+
+.scroller-items {
     display: block;
     padding: 5px 16px;
     width: 100%;
@@ -113,6 +121,7 @@ h4 {
     gap: 10px;
     display: flex;
     flex-direction: column;
+    background-color: #F5F5F5;
 }
 
 .hero-main img {
@@ -152,6 +161,7 @@ h4 {
     border: 1px solid #e2e2e2;
     border-radius: 5px;
     gap: 10px;
+    background-color: #F5F5F5;
 }
 
 .hero-double-column {
@@ -161,6 +171,7 @@ h4 {
     width: 600px;
     border: 1px solid #e2e2e2;
     border-radius: 5px;
+    background-color: #F5F5F5;
 }
 
 .hero-double-column-section {
@@ -200,6 +211,7 @@ h4 {
     gap: 10px;
     justify-content: center;
 }
+
 .hero-box-child {
     width: 100%;
     display: flex;
@@ -207,6 +219,7 @@ h4 {
     gap: 10px;
     padding: 10px 0px 0px;
 }
+
 .hero-box-child img {
     width: 100%;
     aspect-ratio: 7 / 4;
@@ -220,19 +233,24 @@ h4 {
     gap: 10px;
     justify-content: center;
 }
-.psi{
+
+.psi {
     padding: 10px;
     width: 300px;
     border: 1px solid #e2e2e2;
     border-radius: 5px;
     justify-content: space-between;
     display: flex;
-    flex-direction: column;}
-.psi img{
-width: 100%;
-height: 85px;
-border:1px solid red;
+    flex-direction: column;
+    background-color: #F5F5F5;
 }
+
+.psi img {
+    width: 100%;
+    height: 85px;
+    border: 1px solid red;
+}
+
 /*hero column widget end*/
 @media only screen and (max-width: 768px) {
 
@@ -256,42 +274,55 @@ border:1px solid red;
 
 #scroll-container {
     overflow: hidden;
-  }
-  
-  #scroll-text {
+}
+
+#scroll-text {
     /* animation properties */
     -moz-transform: translateX(100%);
     -webkit-transform: translateX(100%);
     transform: translateX(100%);
-    
+
     -moz-animation: my-animation 30s linear infinite;
     -webkit-animation: my-animation 30s linear infinite;
     animation: my-animation 30s linear infinite;
-  }
-  #scroll-text:hover{
+}
+
+#scroll-text:hover {
     animation-play-state: paused;
-  }
-  /* for Firefox */
-  @-moz-keyframes my-animation {
-    from { -moz-transform: translateX(100%); }
-    to { -moz-transform: translateX(-100%); }
-  }
-  
-  /* for Chrome */
-  @-webkit-keyframes my-animation {
-    from { -webkit-transform: translateX(100%); }
-    to { -webkit-transform: translateX(-100%); }
-  }
-  
-  @keyframes my-animation {
+}
+
+/* for Firefox */
+@-moz-keyframes my-animation {
     from {
-      -moz-transform: translateX(100%);
-      -webkit-transform: translateX(100%);
-      transform: translateX(100%);
+        -moz-transform: translateX(100%);
     }
+
     to {
-      -moz-transform: translateX(-100%);
-      -webkit-transform: translateX(-100%);
-      transform: translateX(-100%);
+        -moz-transform: translateX(-100%);
+    }
+}
+
+/* for Chrome */
+@-webkit-keyframes my-animation {
+    from {
+        -webkit-transform: translateX(100%);
+    }
+
+    to {
+        -webkit-transform: translateX(-100%);
+    }
+}
+
+@keyframes my-animation {
+    from {
+        -moz-transform: translateX(100%);
+        -webkit-transform: translateX(100%);
+        transform: translateX(100%);
+    }
+
+    to {
+        -moz-transform: translateX(-100%);
+        -webkit-transform: translateX(-100%);
+        transform: translateX(-100%);
     }
 }
