--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ h4 {
 #line-icon {
     font-size: 1em;
     background: -webkit-linear-gradient(#333, #ea2028);
+    background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     margin-left: -5px;
@@ -100,10 +101,10 @@ h4 {
 }
 
 .section {
-    padding: 16px;
+    padding: 16px 16px 0;
     display: flex;
     flex-direction: row;
-    gap: 10px;
+    gap: 16px;
 }
 
 .hero {
@@ -163,6 +164,16 @@ h4 {
     gap: 10px;
     background-color: #F5F5F5;
 }
+.hero-column-separator {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 300px;
+    gap: 10px;
+    background-color: #F5F5F5;
+    border-right: 1px solid #e2e2e2;
+    padding-right: 10px;
+}
 
 .hero-double-column {
     display: flex;
@@ -186,6 +197,11 @@ h4 {
 }
 
 .hero-column img {
+    width: 100%;
+    border-radius: 5px;
+}
+
+.hero-column-separator img {
     width: 100%;
     border-radius: 5px;
 }
@@ -250,6 +266,21 @@ h4 {
     height: 85px;
     border: 1px solid red;
 }
+.advertisement{
+    padding: 10px;
+    width: 300px;
+    border: 1px solid #e2e2e2;
+    border-radius: 5px;
+    justify-content: space-between;
+    display: flex;
+    flex-direction: column;
+    background-color: #F5F5F5;
+    gap: 10px;
+}
+.advertisement img {
+    width: 100%;
+    height: 100%;
+}
 
 /*hero column widget end*/
 @media only screen and (max-width: 768px) {
@@ -290,7 +321,55 @@ h4 {
 #scroll-text:hover {
     animation-play-state: paused;
 }
+.national-widget{
+    padding: 10px;
+    width: 940px;
+    border: 1px solid #e2e2e2;
+    border-radius: 5px;
+    gap: 10px;
+    display: flex;
+    flex-direction: column;
+    background-color: #F5F5F5;
+}
+#national-widget-title{
+    border-bottom: 2px solid #ea2028;
+    padding-bottom: 5px;
+}
 
+.national-widget-container{
+    display: flex;
+    gap: 10px;
+}
+.national-double-column-section {
+    display: flex;
+    gap: 10px;
+}
+
+.national-double-column-item {
+    display: flex;
+    flex-direction: column;
+}
+.national-box-child {
+    width: 150px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 10px 0px 0px;
+}
+.national-box-child-text {
+    padding: 5px 2px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.national-box-child img {
+    width: 150px;
+    aspect-ratio: 7 / 4;
+    border-radius: 5px;
+}
+#no-padding{
+    padding: 0;
+}
 /* for Firefox */
 @-moz-keyframes my-animation {
     from {
