--- a/style.css
+++ b/style.css
@@ -341,6 +341,17 @@ h4 {
     width: 100%;
     height: 100%;
 }
+.horizontal-psi-container{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+.horizontal-psi{
+    width: 24%;
+    height: 85px;
+    border: 1px solid #ea2028;
+}
+
 
 /*hero column widget end*/
 @media only screen and (max-width: 768px) {
