--- a/style.css
+++ b/style.css
@@ -347,7 +347,7 @@ h4 {
     justify-content: space-between;
 }
 .horizontal-psi{
-    width: 24%;
+    width: 320px;
     height: 85px;
     border: 1px solid #ea2028;
 }
