--- a/style.css
+++ b/style.css
@@ -239,12 +239,7 @@ h4 {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    padding: 10px 0px 0px;
-    border-right: 1px solid #e2e2e2;
-    padding-right: 10px;
-}
-.hero-box-child-separator:nth-child(3){
-    border: none;
+    padding: 10px;
 }
 .hero-separator-container{
     display: flex;
@@ -260,6 +255,11 @@ h4 {
     border-bottom: 1px solid #e2e2e2;
     padding-bottom: 10px;
     margin-bottom: 10px;
+}
+.separator-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 .hero-column {
     display: flex;
@@ -314,7 +314,7 @@ h4 {
 .hero-double-column-item {
     display: flex;
     flex-direction: row;
-    gap: 10px;
+    justify-content: space-between;
 }
 
 .hero-column img {
@@ -410,12 +410,12 @@ h4 {
     height: 85px;
     border: 1px solid #ea2028;
 }
-.separator-border{
+.separator-border-horizontal{
     border-bottom: 1px solid #e2e2e2;
-    padding-top: 15px;
-    margin-bottom: 15px;
 }
-
+.separator-border-vertical{
+    border-right: 1px solid #e2e2e2;
+}
 /*hero column widget end*/
 @media only screen and (max-width: 768px) {
 
