--- a/style.css
+++ b/style.css
@@ -502,12 +502,12 @@ h4 {
 .footer{
     background-color: #e5ca5466;
     margin-top: 10px; 
-    padding: 20px;
 }
 .footer-row{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    padding: 20px;
 }
 .footer-column{
     display: flex;
@@ -518,11 +518,38 @@ h4 {
 .footer-column ul{
     list-style: none;
 }
+.footer-column h2{
+    color: #ea2028;
+}
+.footer-column img{
+    width: 200px;
+    margin-bottom: 10px;
+}
 .footer-credit{
     background-color: #000;
     color: #fff;
     padding: 5px 20px;
     margin-top: 10px;
     display: flex;
-    justify-content: center;
 }
+#myBtn {
+    display: none; /* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    bottom: 20px; /* Place the button at the bottom of the page */
+    right: 30px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    background-color: red; /* Set a background color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 5px; /* Some padding */
+    border-radius: 10px; /* Rounded corners */
+  }
+  
+  #myBtn:hover {
+    background-color: #ea2028; /* Add a dark-grey background on hover */
+  }
+  #myBtn img{
+    height: 30px;
+    width: 30px;
+  }
