--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 /* 
 Author:Md Nayem 
 */
-
+html {
+    scroll-behavior: smooth;
+}
 @font-face {
     font-family: SolaimanLipi;
     src: url('SolaimanLipi.ttf');
@@ -119,6 +121,11 @@ h4 {
     padding: 16px;
 }
 
+.yellow-section{
+    background-color: #FFFF00;
+    margin:10px 0;
+    padding: 16px;
+}
 .red-section-container{
     width: 100%;
     gap: 10px;
@@ -207,6 +214,10 @@ h4 {
     height: 1.2em;
     width: 1.2em;
 }
+#lifestyle-icon{
+    height: 1.2em;
+    width: 1.2em; 
+}
 .video-container{
     position: relative;
     display: inline-block;
@@ -234,6 +245,11 @@ h4 {
     gap: 0.5em;
     color: #fff;
 }
+#lifestyle-row-title{
+    display: flex;
+    gap: 0.5em;
+    color: #ea2028;
+}
 #video-title{
     display: flex;
     gap: 0.5em;
@@ -246,6 +262,16 @@ h4 {
     flex-direction: column;
     gap: 10px;
     padding: 10px;
+}
+.hero-box-child-separator-tight{
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+}
+.hero-box-child-separator-tight img{
+    width: 100%;
+    aspect-ratio: 7/4;
 }
 .hero-separator-container{
     display: flex;
@@ -262,11 +288,21 @@ h4 {
     padding-bottom: 10px;
     margin-bottom: 10px;
 }
+#separator-title-tight{
+    border-bottom: 1px solid #e2e2e2;
+    padding-bottom: 10px;
+}
 .separator-container{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
+.separator-container-tight{
+    display: flex;
+    flex-direction: column;
+    padding: 1%;
+}
+
 .hero-column {
     display: flex;
     flex-direction: column;
@@ -321,8 +357,11 @@ h4 {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    gap: 10px;
 }
-
+#hero-double-column-item-separator{
+    gap: 0;
+}
 .hero-column img {
     width: 100%;
     border-radius: 5px;
@@ -376,7 +415,7 @@ h4 {
 
 .psi {
     padding: 10px;
-    width: 330px;
+    width: 350px;
     border: 1px solid #e2e2e2;
     border-radius: 5px;
     justify-content: space-between;
@@ -421,6 +460,79 @@ h4 {
 }
 .separator-border-vertical{
     border-right: 1px solid #e2e2e2;
+}
+.single-row{
+    display: flex;
+    flex-direction: row;
+    width: 900px;
+    gap: 10px;
+}
+.single-column-container{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.single-column{
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+}
+.card-container-borderless{
+    display: flex;
+    flex-direction: column;
+}
+.card-container-borderless img{
+    width: 15.3vw;
+}
+.card-container-borderless p{
+    padding: 5px;
+}
+.card-container{
+    border: 1px solid #e2e2e2;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+}
+.card-container img{
+    width: 18.5vw;
+    border-radius: 5px 5px 0 0;
+}
+.card-container p{
+    padding: 5px;
+    background-color: #fff;
+    border-radius: 0 0 5px 5px;
+}
+.double-column{
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+}
+
+.card-content-container{
+    width:96%;
+    padding: 2%;
+}
+.card-content-container img{
+    width:100%;
+}
+.card-content-container-small{
+    width:45%;
+    padding: 2%;
+}
+.card-content-container-small img{
+    width:100%;
+}
+
+.content{
+    display: flex;
+    flex-direction: row;
+}
+.content-column{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 50%;
+    gap: 2%;
 }
 /*hero column widget end*/
 @media only screen and (max-width: 768px) {
@@ -532,7 +644,7 @@ h4 {
     margin-top: 10px;
     display: flex;
 }
-#myBtn {
+#gotoTop {
     display: none; /* Hidden by default */
     position: fixed; /* Fixed/sticky position */
     bottom: 20px; /* Place the button at the bottom of the page */
@@ -544,12 +656,26 @@ h4 {
     cursor: pointer; /* Add a mouse pointer on hover */
     padding: 5px; /* Some padding */
     border-radius: 10px; /* Rounded corners */
-  }
-  
-  #myBtn:hover {
+}
+#gotoTop:hover {
     background-color: #ea2028; /* Add a dark-grey background on hover */
-  }
-  #myBtn img{
+}
+#gotoTop img{
     height: 30px;
     width: 30px;
-  }
+}
+* {
+    scrollbar-width: thin; /* Set the width to 'thin' to make it smaller */
+    scrollbar-color: #888 #f0f0f0; /* Thumb and track colors */
+}
+
+::-webkit-scrollbar {
+    width: 6px; /* Adjust the width to make it smaller */
+    height: 4px;
+}
+
+
+::-webkit-scrollbar-thumb {
+    background-color: #888; /* Color of the scrollbar thumb */
+    border-radius: 3px; /* Adjust the radius to make it smaller */
+}
