--- a/style.css
+++ b/style.css
@@ -316,6 +316,11 @@ ul{
     gap: 10px;
     background-color: #F5F5F5;
 }
+.hero-column-tight {
+    display: flex;
+    flex-direction: column;
+    width: 24%;
+}
 .hero-column-border{
     display: flex;
     flex-direction: column;
@@ -384,7 +389,20 @@ ul{
     object-fit: cover;
     height: fit-content;
 }
+.hero-column-child-tight {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+    padding: 5% 3% 0;
+}
 
+.hero-column-child-tight img {
+    width: 40%;
+    aspect-ratio: 7/4;
+    object-fit: cover;
+    height: fit-content;
+}
 .hero-column-child-text {
     padding: 5px 2px;
     display: flex;
@@ -507,7 +525,7 @@ ul{
 .double-column{
     display: flex;
     flex-direction: column;
-    width: 50%;
+    width: 38%;
 }
 
 .card-content-container{
