--- a/style.css
+++ b/style.css
@@ -269,7 +269,7 @@ ul{
     width: 30%;
     display: flex;
     flex-direction: column;
-    padding: 10px;
+    padding: 2% 1%;
 }
 .hero-box-child-separator-tight img{
     width: 100%;
